# aws-agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
playground/: calculator_conditional.py  langgraph_calculator.py  langgraph_hello.py  multi_node.py  react_calculator.py
src/aws_agent/: __init__.py  agent.py  github_models.py  main.py  open_api_client.py  openai.py
tests/: test_main.py
